_sass/theme.scss
* {
  color-adjust: exact !important;
  -webkit-print-color-adjust: exact !important;
  print-color-adjust: exact !important;
}

body {
  font-family: "Anaheim", "Courier New", sans-serif;
  color: #000;
  background-color: #FFF;
}

html {
  scroll-padding-top: 80px;
  scrollbar-color: #d2cbbe rgb(18, 19, 20);
  scrollbar-width: thin;
}


.article-content > table thead,
.article-footer,
.navbar,
.lead,
.share,
.h1,
.h2,
.h3,
.h4,
.h5,
.h6,
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Barlow Condensed', 'Arial Narrow', sans-serif;
}

.article-footer {
  font-size: 0.9rem;
}

@media (min-width: 992px) {
  img.small {
    max-width: 66.666%;
  }
}

@media (min-width: 1200px) {
  img.small {
    max-width: 50%;
  }
}

html {
  font-size: 16px;
}

@media screen and (min-width: 992px) {
  html {
    font-size: 18px;
  }

  body {
    color: #222;
  }
}

@media screen and (min-width: 576px) {
  /*
      fix for browsers breaking pixel-perfect images based on DPI
      this results in an ugly margin around images.
      oh well, i'll just stick some offset on top of it.
      webdev ¯\_(ツ)_/¯
  */

  @media (min-resolution: 1.25dppx) {
    img.pixel-perfect {
      transform: scale(calc(1 / 1.25), calc(1 / 1.25));
      max-width: calc(100% * 1.25);
      transform-origin: left;
      //image-rendering: crisp-edges;
      margin-top: -25px;
      margin-bottom: -25px;
    }
  }

  @media (min-resolution: 1.5dppx) {
    img.pixel-perfect {
      transform: scale(calc(1 / 1.5), calc(1 / 1.5));
      max-width: calc(100% * 1.5);
      margin-top: -50px;
      margin-bottom: -50px;
    }
  }

  @media (min-resolution: 1.75dppx) {
    img.pixel-perfect {
      transform: scale(calc(1 / 1.75), calc(1 / 1.75));
      max-width: calc(100% * 1.75);
      margin-top: -75px;
      margin-bottom: -75px;
    }
  }

  @media (min-resolution: 2dppx) {
    img.pixel-perfect {
      transform: scale(calc(1 / 2), calc(1 / 2));
      max-width: calc(100% * 2);
      margin-top: -100px;
      margin-bottom: -100px;
    }
  }

  @media (min-resolution: 2.5dppx) {
    img.pixel-perfect {
      transform: scale(calc(1 / 2.5), calc(1 / 2.5));
      max-width: calc(100% * 2.5);
      margin-top: -150px;
      margin-bottom: -150px;
    }
  }

  @media (min-resolution: 3dppx) {
    img.pixel-perfect {
      transform: scale(calc(1 / 3), calc(1 / 3));
      max-width: calc(100% * 3);
      margin-top: -200px;
      margin-bottom: -200px;
    }
  }
}

/* fix for buggy firefox window.scrollTo behaviour with scroll-behaviour set to smooth */
@-moz-document url-prefix() {
  :root {
    scroll-behavior: unset;
  }
}

svg {
  fill: #333;
}

img {
  object-fit: cover;
  max-width: 100%;
}

.featured-image-container {
  position: relative;
}

.article-content img,
.featured-image {
  padding-left: 8px;
  padding-right: 8px;
}

.featured-image {
  width: 100%;
  height: auto;
  display: block;
  margin-bottom: 2rem;
  margin-left: 0;
  margin-right: 0;
  box-shadow: rgba(0, 0, 0, 0.1) 0 -2px 4px 1;
  @media (max-width: 767.98px) {
    height: 192px;
  }
}

.featured-image-text {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  font-family: 'Barlow Condensed', 'Arial Narrow', sans-serif;
  font-weight: 600;
  font-style: italic;
  font-size: 2rem;
  color: white;
  overflow: hidden;
  white-space: nowrap;
  text-shadow: rgb(0, 0, 0) 0 -1px 4px;
  align-items: center;
  display: flex;
  justify-content: center;
}

::selection {
  background: #49F3C3 !important;
}

.post-excerpt p {
  display: inline;
}

a {
  color: #00ab6b;
  @media (min-width: 768px) {
    transition: color 0.1s;
  }
  text-decoration: none;
}

.logo {
  margin-top: 16px;
  margin-bottom: 24px;
}

a:not(.nounderline),
a:not(.nounderline):hover, {
  color: #111;
  text-decoration: underline dotted currentColor;
  text-decoration-thickness: 0.5px;
}

a:not(.nounderline):hover {
  color: #49F3C3 !important;
}

.navbar {
  background: #fff;
  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, .15);
  transition: top 0.2s ease-in-out;
}

.main-content {
  min-height: 300px;
}

.site-content {
  min-height: 60vh;
  @media (min-width: 768px) {
    transition: color 0.4s;
  }

  @media not print {
    padding-top: 1.5rem;
    margin-top: 57px;
  }
}

section {
  margin-bottom: 20px;
}

section.recent-posts {
  margin-bottom: -48px;
}

.section-title h2 {
  border-bottom: 1px solid rgba(0, 0, 0, .125);
  font-weight: 700;
  font-size: 1.4rem;
  margin-bottom: 27px;
  cursor: default;
}

.section-title span {
  border-bottom: 1px solid #777;
  display: inline-block;
  padding-bottom: 12px;
  margin-bottom: -1px;
}

.article-content ol,
.article-content ul {
  margin-bottom: 1.5rem;
}

.article-content ol ol,
.article-content ul ul {
  list-style: disc;
  margin-bottom: 0;
}

@media (min-width: 576px) {
  .card-columns.listfeatured {
    -webkit-column-count: 2;
    -moz-column-count: 2;
    column-count: 2;
  }
}

@media (min-width: 992px) {
  .navbar-expand-lg .navbar-nav .nav-link {
    padding-right: 0.8rem;
    padding-left: 0.8rem;
  }
}

.listfeatured {
  border: 1px solid rgba(0, 0, 0, .125);
  border-radius: .25rem;
  @media (min-width: 768px) {
    transition: color 0.3s cubic-bezier(.25, .8, .25, 1);
  }
}

.featuredbox-thumb {
  flex: 0 0 auto;
  height: 100%;
  overflow: hidden;
}

.featuredbox-img-cover {
  object-fit: cover;
  width: 100%;
  height: 100%;
  min-height: 250px;
}

.card {
  overflow: hidden;

  figure {
    margin: 0;
  }
}

.postbox-thumb-text {
  position: absolute;
  z-index: 1000;
  height: 256px;
  top: 0;
  left: 0;
  right: 0;
  align-items: center;
  display: flex;
  justify-content: center;
  font-family: 'Barlow Condensed', 'Arial Narrow', sans-serif, serif, monospace;
  color: white;
  font-weight: 600;
  overflow: hidden;
  font-style: italic;
  white-space: nowrap;
  text-shadow: #006 0px -1px 4px;
}

@media (max-width: 767.98px) {
  .postbox-thumb-text {
    font-size: 1.4em;
  }
}
/* ... */

